--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/html": "^6.4.22",
     "@storybook/manager-webpack5": "^6.4.22",
     "babel-loader": "^8.2.5",
+    "storybook-dark-mode": "^1.0.9",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
